# Copy

./: README.md  main.c
rust/: Cargo.toml  README.md  copy  install.sh
rust/src/: main.rs
