[package]
name = "copy"
version = "2.1.0"
edition = "2021"
authors = ["max"]
description = "File/Clipboard/Pipe Utility - fast, cross-platform, pipe-friendly"

[[bin]]
name = "copy"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Better error handling
anyhow = "1"

[profile.release]
opt-level = "z"      # Optimize for binary size
lto = true           # Link-time optimisation
codegen-units = 1
strip = true         # Strip debug symbols → smaller binary
panic = "abort"
